2014-01-30  Jon Gjengset <jon@thesquareplanet.com>

	* src/gp_types.h src/interpol.c src/interpol.h src/plot2d.c
	src/tables.c docs/gnuplot.doc:  New smoothing option "unwrap" adjusts
	input y values by multiples of 2pi so that the difference between two
	successive y values is never more than pi.

2014-01-29  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot2d.c (store2d_point parametric_fixup): Fix several problems
	with autoscaling of plots in polar mode.  One side effect was that the
	polar grid lines did not work in parametric plots.
	Bug #1323

2014-01-29  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* docs/gnuplot-ja.doc term-ja.diff:  Sync translation to version 1.848

2014-01-29  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/win/wgraph.c:  Horizontal scroll wheel support.

2014-01-29  Jérôme Lodewyck  <lodewyck@users.sourceforge.net>

	* src/command.c: Update GPVAL_* variables after a refresh command.
	Bug #1327

	* src/qtterminal/QtGnuplotWidget.* src/qtterminal/QtGnuplotApplication.cpp:
	Only show the QtGnuplotWindow after a size event is received from gnuplot.
	It avoids a visible fast resize of the window after the first plot command,
	and it also avoids that the plot window infrequently sticks to a wrong size.

2014-01-27  Ethan A Merritt  <merritt@u.washington.edu>

	* src/time.c (xstrftime):  Explicit use of (double) when processing
	fractional seconds.

	* src/Makefile.am:  Build *.moc and *.qrc files for qt terminal in the
	same subdirectory as the *.o files.

	* src/datafile.c:  [xyz]ticlabels were losing resolution due to being
	passed through a float rather than a double.

	* src/datafile.c:  Handle error case of ticlabel function not returning
	a string.

2014-01-26  Jérôme Lodewyck  <lodewyck@users.sourceforge.net>

	* src/qtterminal/qt_term.cpp: Implement font metric caching. This solves
	a flickering issue when a large number of font changes are called (for
	example when rotating the world plot in world2.dem).
